5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1807_2567.log
== TEST (2019-06-06 19:19:47) 
-- CODE:
a = int(input("Digite o numero: "))

for j in range(0, a):
	for i in range(0, a - j):
		print("*", end="")
	print("\n", end="")
	
for j in range(0, a):
	for i in range(0, j + 1):
		pint("*", end="")
	print("\n", end="")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pint("*", end="")
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:20:00) 
-- CODE:
a = int(input("Digite o numero: "))

for j in range(0, a):
	for i in range(0, a - j):
		print("*", end="")
	print("\n", end="")
	
for j in range(0, a):
	for i in range(0, j + 1):
		print("*", end="")
	print("\n", end="")	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:20:10) 
-- CODE:
a = int(input("Digite o numero: "))

for j in range(0, a):
	for i in range(0, a - j):
		print("*", end="")
	print("\n", end="")
	
for j in range(0, a):
	for i in range(0, j + 1):
		print("*", end="")
	print("\n", end="")	
-- EXECUTION TIME:
0.730943
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
